--- a/solana-tools-lite/Cargo.toml
+++ b/solana-tools-lite/Cargo.toml
@@ -9,6 +9,8 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 bs58 = "0.5.1"
 thiserror = "2.0.12"
+anyhow = "1.0.98"
+log = "0.4.27"
 
 # manual cryptography
 hmac = "0.12.1"
