--- a/solana-tools-lite/Cargo.toml
+++ b/solana-tools-lite/Cargo.toml
@@ -18,12 +18,7 @@ pbkdf2 = "0.12.2"
 sha2 = "0.10.9"
 hex = "0.4.3" 
 
-# for comparison/check only in dev/tes
-bip39 = { version = "2.1.0", optional = true }
+bip39 = { version = "2.2.0", features = ["rand"]}
 
 ed25519-dalek = { version = "2.1.1", features = ["std"] }
 rand = "0.9.1"
-
-[features]
-default = []
-with-bip39 = ["bip39"]
