--- a/solana-tools-lite/Cargo.toml
+++ b/solana-tools-lite/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-clap = { version = "4", features = ["derive"] }
+clap = { version = "4", default-features = false, features = ["std", "derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 bs58 = "0.5.1"
@@ -22,3 +22,9 @@ bip39 = { version = "2.2.0", features = ["rand"]}
 
 ed25519-dalek = { version = "2.1.1", features = ["std"] }
 rand = "0.9.1"
+
+[profile.release]
+strip = "symbols"
+lto = true
+codegen-units = 1
+panic = "abort"
