--- a/solana-tools-lite/Cargo.toml
+++ b/solana-tools-lite/Cargo.toml
@@ -8,6 +8,7 @@ clap = { version = "4", default-features = false, features = ["std", "derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 bs58 = "0.5.1"
+base64 = "0.22.1"
 thiserror = "2.0.12"
 anyhow = "1.0.98"
 log = "0.4.27"
@@ -23,6 +24,7 @@ bip39 = { version = "2.2.0", features = ["rand"]}
 ed25519-dalek = { version = "2.1.1", features = ["std"] }
 rand = "0.9.1"
 bincode = { version = "2.0.1", features = ["serde"] }
+short_vec = "0.1"
 
 [profile.release]
 strip = "symbols"
