--- a/solana-tools-lite/Cargo.toml
+++ b/solana-tools-lite/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2024"
 [dependencies]
 clap = { version = "4", default-features = false, features = ["std", "derive"] }
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+serde_json = "1.0.141"
 bs58 = "0.5.1"
-#base64 = "0.22.1" #TODO: bug! 🔴
+#base64 = "0.22.1" 🔴
 data-encoding = "2.9.0"
 thiserror = "2.0.12"
 anyhow = "1.0.98"
@@ -23,9 +23,9 @@ hex = "0.4.3"
 bip39 = { version = "2.2.0", features = ["rand"]}
 
 ed25519-dalek = { version = "2.2.0", features = ["std"] }
-rand = "0.9.1"
+rand = "0.9.2"
 bincode = { version = "2.0.1", features = ["serde"] }
-short_vec = "0.1"
+solana-short-vec = "2.2.1"
 
 [profile.release]
 strip = "symbols"
@@ -35,4 +35,4 @@ panic = "abort"
 
 [dev-dependencies]
 rayon = "1.10.0"
-criterion = "0.6.0"
+criterion = "0.7.0"
