--- a/solana-tools-lite/Cargo.toml
+++ b/solana-tools-lite/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-clap = { version = "4", default-features = false, features = ["std", "derive"] }
+clap = { version = "4.5.44", default-features = false, features = ["std", "derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.142"
 bs58 = "0.5.1"
@@ -12,7 +12,7 @@ bs58 = "0.5.1"
 data-encoding = "2.9.0"
 thiserror = "2.0.15"
 anyhow = "1.0.99"
-log = "0.4.27"
+#log = "0.4.27"
 
 # manual cryptography
 hmac = "0.12.1"
