--- a/solana-tools-lite/Cargo.toml
+++ b/solana-tools-lite/Cargo.toml
@@ -2,6 +2,7 @@
 name = "solana-tools-lite"
 version = "0.1.0"
 edition = "2024"
+#autobins = false
 
 [dependencies]
 clap = { version = "4.5.44", default-features = false, features = ["std", "derive"] }
