--- a/solana-tools-lite/Cargo.toml
+++ b/solana-tools-lite/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "solana-tools-lite"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 description = "A lightweight, SDK-free, offline-first signing toolkit for Solana keys, messages, and transactions."
 repository = "https://github.com/arhangelskij/solana-tools-lite"
@@ -17,11 +17,11 @@ exclude = [
 ]
 
 [dependencies]
-serde = { version = "1.0.228", features = ["derive"] }
+serde = { workspace = true }
 serde_json = "1.0.145"
-bs58 = "0.5.1"
+bs58 = { workspace = true }
 data-encoding = "2.9.0"
-thiserror = "2.0.16"
+thiserror = { workspace = true }
 
 # manual cryptography
 hmac = "0.12.1"
@@ -34,16 +34,16 @@ tiny-bip39 = "2.0.0"
 ed25519-dalek = { version = "2.2.0", features = ["std"] }
 rand = "0.8.5"
 solana-short-vec = "3.1.0"
-zeroize = { version = "1.8.1", features = ["zeroize_derive"], optional = true }
+zeroize = { version = "1.8.1", features = ["derive"], optional = true }
 
 [features]
-default = ["zeroize"]
-zeroize = ["dep:zeroize"]
+default = []
 
 [dev-dependencies]
 rayon = "1.11.0"
 criterion = "0.8.1"
 anyhow = "1.0.100"
+extensions = { path = "../extensions" }
 
 [[bench]]
 name = "bench_signing"
