--- a/solana-tools-lite-cli/Cargo.toml
+++ b/solana-tools-lite-cli/Cargo.toml
@@ -22,7 +22,7 @@ protocol-extensions = ["extensions"]
 [dependencies]
 clap = { version = "4.5.44", default-features = false, features = ["std", "derive", "help", "usage"] }
 solana-tools-lite = { version = "0.1.2", path = "../solana-tools-lite" }
-extensions = { path = "../extensions", optional = true }
+extensions = { package = "solana-tools-lite-extensions", version = "0.1.2", path = "../extensions", optional = true }
 
 # Dependencies needed by handlers and adapters
 serde = { version = "1.0.228", features = ["derive"] }
